fixed navbar alignment and background color of navbar and entire page

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,13 +1,21 @@
 *{
-max-width: 100%;
-margin-left: 1%;
-margin-right: 1%;
+/* max-width: 1366PX; */
+/* margin-left: 1%;
+margin-right: 1%; */
 /* background-color: black; */
 
 }
 
 .linear-gradient-background {
     background-image: linear-gradient(rgba(24,155,204,0.4) 0%, rgba(24,155,204,0.6) 100%);
+}
+
+body{
+    height: 100vh; 
+    background-image: linear-gradient(rgba(24,155,204,0.4) 0%, rgba(24,155,204,0.6) 100%);
+    background-size: cover;
+    background-attachment: fixed; 
+    margin: 0;
 }
 
 header img{
@@ -22,12 +30,9 @@ header h1 {
     align-items: left;
     /* margin-top: 1%; */
     margin-bottom: -45px;
+    background-image: linear-gradient(rgba(24,155,204,0.4) 0%, rgba(24,155,204,0.6) 100%);
+    margin-top: 0;
 }
-
-/* body{
-    background-image: linear-gradient(rgba(128,128,128,0.4) 0%, rgba(128,128,128,0.6) 100%);
-
-} */
 
 .hero-image {
     width: 100%;
@@ -46,8 +51,23 @@ header h1 {
     /* align-items: right; */
     justify-content: flex-end;
     align-items: center;
+    /* background-image: linear-gradient(rgba(24,155,204,0.4) 0%, rgba(24,155,204,0.6) 100%); */
+    width: 100%;
+    margin-right: 0;
+    margin-left: 0;
+
 
 }
+
+.navbar li{
+    margin-right: 10px;
+    width: 8%;
+}
+
+/* .navbar ul{
+    background-image: linear-gradient(rgba(24,155,204,0.4) 0%, rgba(24,155,204,0.6) 100%);
+
+} */
 
 .navbar a:hover {
     color: #189BCC;
@@ -55,14 +75,6 @@ header h1 {
 
 }
 
-/* aside{
-    max-width: 200px;
-    border-right: 30px solid #189BCC;
-} */
-/* body {
-    width: 100%;
-    height: 100%;
-} */
 
 p{
     max-width: 100%;
@@ -87,12 +99,6 @@ section{
     height: auto;
      margin-right: 10%; 
 } */
-
-body {
-    height: 100vh; 
-    background-image: linear-gradient(rgba(24,155,204,0.4) 0%, rgba(24,155,204,0.6) 100%);
-    background-size: cover;
-}
 
 body article{
     position: relative;
@@ -144,6 +150,7 @@ height: 34%;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr; 
     grid-gap: 2px;
+    max-block-size: 1300px;
     /* position:sticky; */
     /* opacity: .5; */
     /* background-image: linear-gradient(rgba(24,155,204,0.4) 0%, rgba(24,155,204,0.6) 100%); */
@@ -187,4 +194,5 @@ flex-grow: 1;
 footer{
     background-image: linear-gradient(rgba(24,155,204,0.4) 0%, rgba(24,155,204,0.6) 100%);
     height: 100px;
-    }
+    max-width: 100%;
+}
